2012-12-21  Eric Botcazou  <ebotcazou@adacore.com>

	* adaint.c: Move directive around.
	* argv.c: Likewise.
	* cio.c: Likewise.
	* cstreams.c: Likewise.
	* env.c: Likewise.
	* exit.c: Likewise.
	* init.c: Likewise.
	* initialize.c: Likewise.
	* raise.c: Likewise.
	* seh_init.c: Likewise.
	* targext.c: Likewise.

2012-12-15  Eric Botcazou  <ebotcazou@adacore.com>
	    Martin Ettl  <ettl.martin@gmx.de>

	PR ada/53996
	* gcc-interface/utils.c (gnat_type_for_size): Use %u in lieu of %d.

2012-12-11  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/Make-lang.in (RTS_DIR): Define only if Ada is enabled.

2012-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (gnat_to_gnu) <N_Indexed_Component>: Assert
	that the type of the prefix is ultimately an array.

2012-12-08  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (Subprogram_Body_to_gnu): Be prepared for a
	by-ref VAR_DECL in the case of an Out parameter passed by copy.

2012-12-05  Robert Dewar  <dewar@adacore.com>

	* par_sco.adb, sem_prag.adb, put_scos.adb, get_scos.adb: Minor
	reformatting.

2012-12-05  Ed Schonberg  <schonberg@adacore.com>

	* sem_ch3.adb: Code clean up.

2012-12-05  Arnaud Charlet  <charlet@adacore.com>

	* gcc-interface/Make-lang.in: Update dependencies.
	* gcc-interface/lang.opt: New language AdaSCIL.
	* gcc-interface/lang-specs.h: Add specs for adascil language.

2012-12-05  Thomas Quinot  <quinot@adacore.com>

	* par_sco.adb (Traverse_Aspects): Ensure we always have
	an entry in the sloc -> SCO map for invariants, since
	Set_SCO_Pragma_Enabled is called with that sloc when checks
	are enabled.

2012-12-05  Thomas Quinot  <quinot@adacore.com>

	* exp_ch4.adb: Minor reformatting.

2012-12-05  Hristian Kirtchev  <kirtchev@adacore.com>

	* par-prag.adb: Checks and processing of pragma Assume are
	carried out by Sem_Prag.
	* sem_prag.adb (Analyze_Pragma): Check the legality of pragma
	Assume.